--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,10 +20,10 @@ services:
     env_file:
       - whole.env # mlflow configure
     ports:
-      - "${MLFLOW_HOST_PORT}:${MLFLOW_PORT}"
-      - "${JUPYTER_HOST_PORT}:${JUPYTER_PORT}"
+      - "5000:5000"
+      - "6008:8888"
     volumes:
-      - "./mlflow_artifact_root:${DEFAULT_ARTIFACT_ROOT}"
+      - "./mlflow_artifact_root:/home/jovyan/mlflow_artifact_root"
 
 
 # mlflow server --default-artifact-root /home/jovyan/mlflow_artifact_root --backend-store-uri postgresql://unicorn_user:magical_password@database/rainbow_database --host 0.0.0.0 --port 5000
