refactor docker compose and configuration file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,108 @@
-version: '3'
+version: "3.3"
 services:
-  database:
-    build: 
-      context: .
-      dockerfile: database.Dockerfile
-    env_file:
-      - whole.env # PG configure
-    ports:
-      - "5432:5432"
+  db:
+    restart: always
+    image: postgres
+    container_name: ${POSTGRES_SERVER}
+    expose:
+      - "${PG_PORT}"
+    networks:
+      - backend
+    environment:
+      - POSTGRES_USER=${PG_USER}
+      - POSTGRES_PASSWORD=${PG_PASSWORD}
+      - POSTGRES_DATABASE=${PG_DATABASE}
     volumes:
-      - ./mlflow_backend:/var/lib/postgresql/data
-
-  jupyter:
+      - ${POSTGRES_VOLUME_PATH}:/var/lib/postgresql/data/
+    healthcheck:
+      test: ["CMD", "pg_isready", "-p", "${PG_PORT}", "-U", "${PG_USER}"]
+      interval: 5s
+      timeout: 5s
+      retries: 3
+  
+  s3:
+    restart: always
+    image: minio/minio
+    container_name: ${MINIO_SERVER}
+    volumes:
+      - ${MINIO_VOLUME_PATH}:/data
+    ports:
+      - "${MINIO_PORT}:9000"
+      - "${MINIO_CONSOLE_PORT}:9001"
+    networks:
+      - frontend
+      - backend
+    environment:
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+      - MINIO_ADDRESS=${MINIO_ADDRESS}
+      - MINIO_PORT=${MINIO_PORT}
+      - MINIO_STORAGE_USE_HTTPS=${MINIO_STORAGE_USE_HTTPS}
+      - MINIO_CONSOLE_ADDRESS=${MINIO_CONSOLE_ADDRESS}
+    command: server /data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+  
+  create_buckets:
+    image: minio/mc
+    container_name: mlflow_create_buckets
+    environment:
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER} # Access Key
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD} # Secret Key
+      - MLFLOW_BUCKET_NAME=${MLFLOW_BUCKET_NAME}
+      - MINIO_PORT=${MINIO_PORT}     
     depends_on:
-      - database
-    build: 
-      context: .
-      dockerfile: jupyter.Dockerfile
-    env_file:
-      - whole.env # mlflow configure
-    ports:
-      - "5000:5000"
-      - "6008:8888"
+      - s3
+    networks:
+      - backend
     volumes:
-      - "./mlflow_artifact_root:/code/mlflow_artifact_root"
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [gpu]
+      - ${MINIO_VOLUME_PATH}:/data
+    entrypoint: >
+      /bin/sh -c '
+      sleep 5;
+      /usr/bin/mc config host add s3 http://s3:${MINIO_PORT} ${MINIO_ROOT_USER} ${MINIO_ROOT_PASSWORD} --api S3v4;
+      [[ ! -z "`/usr/bin/mc ls s3 | grep challenge`" ]] || /usr/bin/mc mb s3/${MLFLOW_BUCKET_NAME};
+      /usr/bin/mc policy download s3/${MLFLOW_BUCKET_NAME};
+      exit 0;
+      '
+
+  tracking_server:
+    restart: always
+    build: ./mlflow
+    image: ${MLFLOW_SERVER}
+    container_name: ${MLFLOW_SERVER}
+    depends_on:
+      - db
+    ports:
+      - "${MLFLOW_PORT}:5000"
+    networks:
+      - frontend
+      - backend
+    environment:
+      - AWS_ACCESS_KEY_ID=${MINIO_ROOT_USER}
+      - AWS_SECRET_ACCESS_KEY=${MINIO_ROOT_PASSWORD}
+      - MLFLOW_S3_ENDPOINT_URL=http://s3:${MINIO_PORT}
+      - MLFLOW_S3_IGNORE_TLS=true
+      - MLFLOW_BUCKET_NAME=${MLFLOW_BUCKET_NAME}
+      - BACKEND_STORE_URI=postgresql://${PG_USER}:${PG_PASSWORD}@db:${PG_PORT}/${PG_DATABASE}
+    entrypoint: >
+     mlflow server 
+     --backend-store-uri "postgresql://${PG_USER}:${PG_PASSWORD}@db:${PG_PORT}/${PG_DATABASE}" 
+     --host 0.0.0.0 
+     --serve-artifacts  
+     --artifacts-destination s3://${MLFLOW_BUCKET_NAME} 
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:${MLFLOW_PORT}/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
 
-# mlflow server --default-artifact-root /home/jovyan/mlflow_artifact_root --backend-store-uri postgresql://unicorn_user:magical_password@database/rainbow_database --host 0.0.0.0 --port 5000
+networks:
+  frontend:
+    driver: bridge
+  backend:
+    driver: bridge
